--- a/ApexReportTool/ApexReportTool/ApexReportTool.csproj
+++ b/ApexReportTool/ApexReportTool/ApexReportTool.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -60,6 +61,7 @@
     </ApplicationDefinition>
     <Compile Include="ApexEac.cs" />
     <Compile Include="ApexLayout.cs" />
+    <Compile Include="Hotkey.cs" />
     <Compile Include="MessageBoxEx.cs" />
     <Compile Include="ReportDetails.cs" />
     <Compile Include="Screenshot.cs" />
